--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <SearchView
             android:id="@+id/searchView"
@@ -77,11 +77,11 @@
             android:elevation="10dp"
             android:text="@string/ordericon"
             android:textColor="@color/white"
+            android:textSize="12sp"
             app:cornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="@+id/view"
             app:layout_constraintTop_toTopOf="@+id/view"
-            tools:ignore="TextContrastCheck"
-            android:textSize="12sp"/>
+            tools:ignore="TextContrastCheck" />
 
         <TextView
             android:id="@+id/textView2"
@@ -90,6 +90,7 @@
             android:layout_alignBottom="@id/view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
             android:text="@string/orderbyprescription"
             android:textAllCaps="false"
             android:textColor="@color/black"
@@ -135,8 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -322,15 +322,18 @@
         </androidx.cardview.widget.CardView>
 
 
-        <View
+        <com.denzcoskun.imageslider.ImageSlider
             android:id="@+id/coursel"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:background="@android:color/holo_orange_light"
+            android:elevation="10dp"
+            app:iss_auto_cycle="true"
+            app:iss_corner_radius="10"
+            app:iss_delay="0"
+            app:iss_period="1050"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card1" />
@@ -358,7 +361,7 @@
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     android:text="Categories"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
