--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -38,7 +38,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/transparent"
+            android:background="@android:color/transparent"
             android:contentDescription="@string/cart"
             android:elevation="5dp"
             android:minHeight="48dp"
@@ -77,7 +77,7 @@
             android:backgroundTint="@color/teal_700"
             android:elevation="10dp"
             android:text="@string/ordericon"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             android:textSize="12sp"
             app:cornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="@+id/view"
@@ -94,7 +94,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/orderbyprescription"
             android:textAllCaps="false"
-            android:textColor="@color/black"
+            android:textColor="@android:color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/view"
             app:layout_constraintTop_toTopOf="@+id/view" />
@@ -105,7 +105,7 @@
             android:layout_height="55dp"
             android:layout_marginStart="16dp"
             android:text="@string/orderprescription"
-            android:textColor="#000000"
+            android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="@+id/view"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/view"
@@ -117,8 +117,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginTop="32dp"
+            android:fontFamily="@font/ibm_bold"
             android:text="@string/username"
-            android:textStyle="bold"
+            android:textColor="@android:color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
