--- a/app/src/main/res/layout/fragment_edit_address.xml
+++ b/app/src/main/res/layout/fragment_edit_address.xml
@@ -157,7 +157,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -166,8 +166,13 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="50dp"
             android:background="@drawable/gradient"
+            android:fontFamily="@font/ibm_regular"
             android:text="Save"
-            android:textSize="20sp" />
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            app:backgroundTint="@android:color/black"
+            app:backgroundTintMode="screen"
+            app:cornerRadius="20dp" />
 
 
     </LinearLayout>
