--- a/app/src/main/res/layout/orderprescription.xml
+++ b/app/src/main/res/layout/orderprescription.xml
@@ -126,6 +126,7 @@
             android:id="@+id/ConstraintLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="20dp"
             android:background="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/materialButton"
             app:layout_constraintEnd_toEndOf="parent"
