--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,16 +57,17 @@
 
 
                 <View
+                    android:id="@+id/divider2"
                     android:layout_width="match_parent"
-                    android:layout_height="2sp"
-                    android:background="#4D000000"
-
-                    />
+                    android:layout_height="1dp"
+                    android:background="?android:attr/listDivider"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10sp"
+                    android:layout_marginEnd="10sp"
                     android:layout_marginTop="10sp"
                     android:layout_marginBottom="10sp"
                     android:text="Male-20"
@@ -73,11 +75,12 @@
                     android:textSize="28sp" />
 
                 <View
+                    android:id="@+id/divider3"
                     android:layout_width="match_parent"
-                    android:layout_height="2sp"
-                    android:background="#4D000000"
-
-                    />
+                    android:layout_height="1dp"
+                    android:background="?android:attr/listDivider"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -173,6 +176,14 @@
             android:textSize="26sp"
             android:textStyle="bold" />
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -183,6 +194,7 @@
             android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold" />
+
         <!--            </LinearLayout>-->
 
 
