--- a/app/src/main/res/layout/fragment_address_book.xml
+++ b/app/src/main/res/layout/fragment_address_book.xml
@@ -42,33 +42,38 @@
                 android:paddingLeft="8dp"
                 android:textStyle="bold"
                 android:textSize="20dp"/>
+
             <Button
+                android:id="@+id/editadd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:layout_margin="2dp"
                 android:backgroundTint="@color/white"
                 android:text="Edit"
                 android:textColor="@color/teal_200"
-                android:textStyle="bold"
-                android:id="@+id/editadd"/>
+                android:textStyle="bold" />
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/address2"
-                android:paddingLeft="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="3 Newbridge court"
-                android:textSize="18dp"/>
+                android:textSize="18dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="Chino Hills,CA 91709, United States"
-                android:paddingLeft="8dp"
-                android:textSize="18dp"/>
+                android:textSize="18dp" />
+
             <CheckBox
                 android:layout_width="wrap_content"
-                android:paddingLeft="5dp"
                 android:layout_height="wrap_content"
-                android:text="Use as shipping address"/>
+                android:padding="5dp"
+                android:text="Use as shipping address" />
 
         </LinearLayout>
 
@@ -93,51 +98,50 @@
                 android:paddingLeft="8dp"
                 android:textStyle="bold"
                 android:textSize="20dp"/>
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:layout_margin="2dp"
                 android:backgroundTint="@color/white"
                 android:text="Edit"
                 android:textColor="@color/teal_200"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
+                android:padding="5dp"
                 android:text="3 Newbridge court"
-                android:textSize="18dp"/>
+                android:textSize="18dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Chino Hills,CA 91709, United States"
-                android:paddingLeft="8dp"
-                android:textSize="18dp"/>
+                android:textSize="18dp"
+                android:padding="5dp" />
+
             <CheckBox
                 android:layout_width="wrap_content"
-                android:paddingLeft="5dp"
                 android:layout_height="wrap_content"
-                android:text="Use as shipping address"/>
+                android:padding="5dp"
+                android:text="Use as shipping address" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/imageButton"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/teal_200"
-        android:text="+"
-        android:textSize="40dp"
-        app:cornerRadius="20dp"
-        />
+        app:srcCompat="@drawable/ic_round_add_24" />
 
 
 </RelativeLayout>
