--- a/app/src/main/res/layout/fragment_health_records_page.xml
+++ b/app/src/main/res/layout/fragment_health_records_page.xml
@@ -1,107 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".health_records_page"
     android:orientation="vertical"
-    android:padding="50dp"
-    >
+    tools:context=".health_records_page">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="30dp"
-        android:gravity="center"
-        android:layout_gravity="center">
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="Hey,  "
-            android:textSize="34dp" />
-
-        <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/teal_200"
-        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-        android:text="Gyan Ratan"
-        android:textSize="22dp"
-        />
-
-    </LinearLayout>
-
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="Clinical Documents"
-            android:textAlignment="textStart"
+            android:orientation="vertical">
 
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="Doctor Consultation"
-            android:textAlignment="textStart" />
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="Test Repost"
-            android:textAlignment="textStart" />
+                    android:fontFamily="@font/ibm_semibold"
+                    android:text="Hey, "
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="Hospitalisation"
-            android:textAlignment="textStart" />
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/teal_200"
+                    android:backgroundTintMode="screen"
+                    android:fontFamily="@font/ibm_bold"
+                    android:text="@string/username"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:cornerRadius="20dp"
+                    app:icon="@drawable/ic_round_arrow_circle_down_24"
+                    app:iconGravity="end" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="Health Conditions"
-            android:textAlignment="textStart" />
+            </LinearLayout>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="vaccination reports"
-            android:textAlignment="textStart" />
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></com.google.android.material.card.MaterialCardView>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="Bills"
-            android:textAlignment="textStart" />
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:backgroundTint="@android:color/white"
+                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:padding="15dp"
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:padding="15dp"
-            android:text="Insurance"
-            android:textAlignment="textStart" />
+                android:text="Clinical Documents"
+                android:textAlignment="textStart"
+                android:textColor="@color/teal_700"
+                app:elevation="5dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:backgroundTint="@android:color/white"
+                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:padding="15dp"
+                android:text="Doctor Consultation"
+                android:textAlignment="textStart"
+                android:textColor="@color/teal_700"
+                app:elevation="5dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:backgroundTint="@android:color/white"
+                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:padding="15dp"
+                android:text="Test Repost"
+                android:textAlignment="textStart"
+                android:textColor="@color/teal_700"
+                app:elevation="5dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
+                android:padding="15dp"
+                android:text="Hospitalisation"
+                android:textAlignment="textStart"
+                android:textColor="@color/teal_700"
+                app:backgroundTint="@color/white"
+                app:cornerRadius="10dp"
+                app:elevation="5dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:backgroundTint="@android:color/white"
+                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:padding="15dp"
+                android:text="vaccination reports"
+                android:textAlignment="textStart"
+                android:textColor="@color/teal_700"
+                app:elevation="5dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:backgroundTint="@android:color/white"
+                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:padding="15dp"
+                android:text="Bills"
+                android:textAlignment="textStart"
+                android:textColor="@color/teal_700"
+                app:elevation="5dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:backgroundTint="@android:color/white"
+                android:drawableRight="@drawable/ic_baseline_arrow_right_24"
+                android:padding="15dp"
+                android:text="Insurance"
+                android:textAlignment="textStart"
+                android:textColor="@color/teal_700"
+                app:elevation="5dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
