--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -118,6 +118,7 @@
             android:layout_marginStart="100dp"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/ibm_bold"
+            android:inputType="textPersonName"
             android:text="@string/username"
             android:textColor="@android:color/black"
             app:layout_constraintStart_toStartOf="parent"
