--- a/app/src/main/res/layout/orderprescription.xml
+++ b/app/src/main/res/layout/orderprescription.xml
@@ -133,19 +133,32 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/attach"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/white"
+                android:text="@string/AttachedPrescription"
+                android:textAlignment="viewStart"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@android:color/black"
+                app:elevation="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/attachView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="45dp"
-                android:layout_marginEnd="16dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="-8dp"
+                android:layout_marginBottom="10dp"
                 android:visibility="visible"
-                app:cardElevation="10dp"
                 app:contentPadding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/attach">
 
                 <ImageView
                     android:id="@+id/imageView"
@@ -155,23 +168,15 @@
 
             </androidx.cardview.widget.CardView>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/attach"
-                android:layout_width="match_parent"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="@android:color/white"
-                android:elevation="10dp"
-                android:onClick="@android:string/untitled"
-                android:text="@string/AttachedPrescription"
-                android:textAlignment="viewStart"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@android:color/black"
-                app:cornerRadius="2dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:clickable="true"
+                app:fabSize="mini"
+                app:layout_constraintEnd_toEndOf="@id/attach"
+                app:layout_constraintTop_toTopOf="@id/attach"
+                app:srcCompat="@drawable/btnarrowdown" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -179,7 +184,8 @@
             android:id="@+id/materialButton"
             android:layout_width="217dp"
             android:layout_height="48dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/Placerequest"
             android:textAlignment="center"
             android:textColor="@android:color/black"
@@ -187,7 +193,16 @@
             app:cornerRadius="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
