--- a/app/src/main/res/layout/fragment_health_records_page.xml
+++ b/app/src/main/res/layout/fragment_health_records_page.xml
@@ -52,6 +52,12 @@
 
             </LinearLayout>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></com.google.android.material.card.MaterialCardView>
