--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -59,7 +59,7 @@
                 <View
                     android:id="@+id/divider2"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="2dp"
                     android:background="?android:attr/listDivider"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -67,44 +67,52 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10sp"
-                    android:layout_marginTop="10sp"
-                    android:layout_marginBottom="10sp"
-                    android:text="Male-20"
+                    android:fontFamily="sans-serif-black"
 
-                    android:textSize="28sp" />
+                    android:gravity="end"
+                    android:padding="10dp"
+                    android:text="Male-20"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textColor="@android:color/black" />
 
                 <View
                     android:id="@+id/divider3"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="2dp"
                     android:background="?android:attr/listDivider"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
-                    android:layout_marginBottom="10sp"
-                    android:orientation="horizontal">
+                    android:padding="10dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10sp"
-                        android:text="Edit"
-                        android:textSize="22sp" />
-                    "
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="10sp"
+                        android:fontFamily="@font/ibm_bold"
+                        android:text="edit"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@android:color/black"
+                        app:drawableStartCompat="@drawable/ic_round_edit_24" />
+
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingRight="10sp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="10dp"
+                        android:fontFamily="@font/work_sans_semibold"
                         android:text="9084000392"
-                        android:textAlignment="textEnd"
-                        android:textSize="24sp" />
-                </LinearLayout>
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@android:color/black" />
+                </RelativeLayout>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -115,6 +123,22 @@
         <!--                android:orientation="vertical"-->
 
         <!--                >-->
+
+        <!--            </LinearLayout>-->
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
         <TextView
             android:id="@+id/account_family"
             android:layout_width="match_parent"
@@ -153,6 +177,12 @@
             android:textSize="26sp"
             android:textStyle="bold" />
 
+        <View
+            android:id="@+id/divider4"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="?android:attr/listDivider" />
+
         <TextView
             android:id="@+id/account_setting"
             android:layout_width="match_parent"
@@ -179,7 +209,7 @@
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -194,9 +224,6 @@
             android:textColor="@color/black"
             android:textSize="26sp"
             android:textStyle="bold" />
-
-        <!--            </LinearLayout>-->
-
 
     </LinearLayout>
 
