--- a/app/src/main/res/layout/fragment_why_prescription.xml
+++ b/app/src/main/res/layout/fragment_why_prescription.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_round_remove" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
         android:text="Valid Prescription Guide"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
     <View
         android:layout_width="match_parent"
         android:layout_marginTop="0dp"
@@ -60,18 +69,20 @@
 
 
     </LinearLayout>
+
     <View
+        android:id="@+id/divider5"
         android:layout_width="match_parent"
-        android:layout_marginTop="0dp"
-        android:layout_height="2sp"
-        android:layout_marginVertical="10sp"
-        android:background="@color/black"/>
+        android:layout_height="3dp"
+        android:background="?android:attr/listDivider" />
+
     <Button
         android:id="@+id/skip"
-        android:layout_width= "match_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Okay , I understand"
         android:layout_marginHorizontal="20sp"
-        />
+        android:backgroundTint="@color/teal_200"
+        android:text="Okay , I understand"
+        app:cornerRadius="20dp" />
 
 </LinearLayout>
