--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,8 +38,8 @@
 
     <ImageView
         android:id="@+id/pharmapic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:layout_below="@+id/toolbars"
         android:src="@drawable/_601031" />
     <TextView
@@ -56,7 +58,7 @@
         android:id="@+id/phonen"
         android:layout_below="@id/phoneno"
         android:layout_centerHorizontal="true"
-        android:text="We will send you a one time password on this Mobile Number"
+        android:text="Enter OTP sent on"
         android:gravity="center"
         android:padding="10dp"
         android:textStyle="normal"
@@ -64,13 +66,38 @@
         android:textSize="20dp"/>
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+91-"
+            android:textSize="22dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:text="1234567890"
+            android:textSize="22dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:id="@+id/phone_Number_otp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:id="@+id/otp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+
         android:layout_below="@+id/phonen">
         <EditText
+            android:gravity="center"
             android:id="@+id/code1"
             android:layout_width="40dp"
             android:layout_height="45dp"
@@ -84,6 +111,7 @@
             tools:ignore="LabelFor"/>
 
         <EditText
+            android:gravity="center"
             android:id="@+id/code2"
             android:layout_width="40dp"
             android:layout_height="45dp"
@@ -97,6 +125,7 @@
             tools:ignore="LabelFor"/>
 
         <EditText
+            android:gravity="center"
             android:id="@+id/code3"
             android:layout_width="40dp"
             android:layout_height="45dp"
@@ -110,6 +139,7 @@
             tools:ignore="LabelFor"/>
 
         <EditText
+            android:gravity="center"
             android:id="@+id/code4"
             android:layout_width="40dp"
             android:layout_height="45dp"
@@ -136,7 +166,10 @@
             android:text="Didn't receive the OTP?"/>
         <!--        android text main string bhi laga sakte hain-->
 
-        <Button
+        <TextView
+            android:layout_marginVertical="8dp"
+            android:layout_marginStart="10dp"
+            android:id="@+id/resend_otp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
@@ -150,14 +183,12 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/resend_otp_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textresendOTP"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/teal_200"
         android:text="Submit"
         app:cornerRadius="20dp" />
 
-</RelativeLayout>
+</LinearLayout>
