--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#34E2D3</color>
+    <color name="teal_500">#12B8CE</color>
     <color name="teal_700">#1C697B</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
