--- a/app/src/main/res/layout/activity_your_orders.xml
+++ b/app/src/main/res/layout/activity_your_orders.xml
@@ -1,19 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_your_orders"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".YourOrders.YourOrdersActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-
-        android:id="@+id/fragmentYourOrders"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape"
+        android:fitsSystemWindows="true">
 
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/your_orders_graph" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/arrow_back"
+                app:tint="@android:color/white" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="@font/work_sans_semibold"
+                android:gravity="center|start"
+                android:text="My Orders"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        app:tabGravity="center"
+        app:tabIndicator="@drawable/active"
+        app:tabIndicatorAnimationMode="elastic"
+        app:tabIndicatorColor="@color/teal_200"
+        app:tabIndicatorGravity="stretch"
+        app:tabMode="fixed"
+        app:tabRippleColor="@android:color/transparent"
+        app:tabSelectedTextAppearance="@style/TabLayout"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextAppearance="@style/TabLayout" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/orderviewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
