--- a/app/src/main/res/layout/fragment_edit_address.xml
+++ b/app/src/main/res/layout/fragment_edit_address.xml
@@ -165,13 +165,11 @@
             android:layout_marginTop="240dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="50dp"
-            android:background="@drawable/gradient"
             android:fontFamily="@font/ibm_regular"
             android:text="Save"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            app:backgroundTint="@android:color/black"
-            app:backgroundTintMode="screen"
+            app:backgroundTint="@color/teal_500"
             app:cornerRadius="20dp" />
 
 
