--- a/app/src/main/res/layout/fragment_why_prescription.xml
+++ b/app/src/main/res/layout/fragment_why_prescription.xml
@@ -22,11 +22,12 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold" />
+
     <View
         android:layout_width="match_parent"
-        android:layout_marginTop="0dp"
         android:layout_height="2sp"
-        android:background="@color/black"/>
+        android:layout_marginTop="0dp"
+        android:background="@color/black" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/Sliderpager"
@@ -34,35 +35,40 @@
         android:layout_height="500dp" />
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-
         android:gravity="center"
+
+        android:orientation="horizontal"
 
         >
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/backbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="20sp"
-            android:src="@drawable/ic_baseline_navigate_before_24"
             android:background="@color/transparent"
             android:scaleX="2"
             android:scaleY="2"
-            />
+            android:src="@drawable/ic_baseline_navigate_before_24" />
+
+        <LinearLayout
+            android:id="@+id/dots"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
+
         <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
             android:id="@+id/nextbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="20sp"
-            android:src="@drawable/ic_baseline_navigate_next_24"
             android:background="@color/transparent"
             android:scaleX="2"
             android:scaleY="2"
+            android:src="@drawable/ic_baseline_navigate_next_24"
 
 
             />
@@ -83,6 +89,7 @@
         android:layout_marginHorizontal="20sp"
         android:backgroundTint="@color/teal_200"
         android:text="Okay , I understand"
+        android:textColor="@android:color/white"
         app:cornerRadius="20dp" />
 
 </LinearLayout>
