--- a/app/src/main/res/layout/fragment_why_prescription_2.xml
+++ b/app/src/main/res/layout/fragment_why_prescription_2.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_round_remove" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10sp"
-        android:text="Valid Prescription Guide"
+        android:text="Why we need a prescription ?"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="26sp"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
     <View
         android:layout_width="match_parent"
         android:layout_marginTop="0dp"
@@ -21,24 +29,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <ImageView
             android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:background="@android:color/darker_gray"/>
+            app:srcCompat="@drawable/medical_prescription" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="20sp">
+            android:layout_margin="20sp"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Provide right medicines"
                 android:textColor="@color/black"
-                android:textStyle="bold"
                 android:textSize="18sp"
+                android:textStyle="bold"
 
                 />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,18 +61,57 @@ prescription.\n\nMedicines come in various strengths and
 combinations. There is a reason why
 certain strengths are given depending on
 your severity of illness, age, weight and
-other factors"/>
+other factors" />
 
         </LinearLayout>
 
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/okay"
-        android:layout_width= "match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/gavel" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20sp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="In Accordance with the law"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Government of India has identified  medicines (scheduled H and H1) that  require a valid prescription from a  registered medical practitioner to be  dispensed by a pharmacy." />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/okay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20sp"
+        android:backgroundTint="@color/teal_500"
         android:text="Okay"
-        android:layout_margin="20sp"/>
+        android:textColor="@android:color/white"
+        app:cornerRadius="20dp" />
 
 </LinearLayout>
