--- a/app/src/main/res/navigation/your_orders_graph.xml
+++ b/app/src/main/res/navigation/your_orders_graph.xml
@@ -3,11 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/your_orders_graph"
-    app:startDestination="@id/your_orders">
+    app:startDestination="@id/YourOrdersActivity">
 
-    <fragment
+    <!--<fragment
         android:id="@+id/your_orders"
         android:name="com.example.apnicare.YourOrders.your_orders"
         android:label="fragment_your_orders"
-        tools:layout="@layout/fragment_your_orders" />
+        tools:layout="@layout/fragment_your_orders" />-->
+    <activity
+        android:id="@+id/YourOrdersActivity"
+        android:name="com.example.apnicare.YourOrders.YourOrdersActivity"
+        android:label="activity_your_orders"
+        tools:layout="@layout/activity_your_orders"/>
+
 </navigation>
